force-app/main/default/objects/ESB_End_Points_for_PIPR__c/ESB_End_Points_for_PIPR__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Place holder to store ESB endpoints for PIPR job</description>
    <label>ESB End Points for PIPR</label>
</CustomObject>