force-app/main/default/objects/ESB_End_Points_for_PIPR__c/fields/Message_end_point__c.field-meta.xml
<CustomField>
    <fullName>Message_end_point__c</fullName>
    <description>end point url to post message</description>
    <label>Message end point</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>