force-app/main/default/objects/ESB_End_Points_for_PIPR__c/fields/OrgId__c.field-meta.xml
<CustomField>
    <fullName>OrgId__c</fullName>
    <inlineHelpText>SFDC oraganization id.</inlineHelpText>
    <label>OrgId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>